--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,35 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    background-color: #e6ecf0;
+}
+
+/* Navbar */
+.navbar {
+    margin-bottom: 1erm;
+}
+
+.navbar a {
+    font-weight: bold;
+    color: white;
+}
+
+.navbar a:hover {
+    color: white;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.navbar-brand > img { /* > is the direct descendant selector */
+    display: inline-block; /* so we can add some width an height */
+    width: 20px;
+    margin-bottom: 2px;
+    margin-right: 5px;
+    border-radius: 2px;
+}
+
+ul.nav.navbar-nav li {
+    margin: 0 0.5rem;
+}
+
+.onboarding > .navbar {
+    background-image: url("./images/nav-bg.png");
 }
