--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,36 @@
+/* General */
 body {
-    background-color: #e6ecf0;
+    background-color: #FFFAF5;
+    word-break: break-word;
+    hyphens: auto;
+}
+
+button {
+    margin-top: 15px;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+a.btn.btn-danger,
+a.btn.btn-danger:hover {
+    color: white;
+}
+
+label {
+    margin-top: 10px;
 }
 
 /* Navbar */
 .navbar {
-    margin-bottom: 1erm;
+    margin-bottom: 1rem;
 }
 
 .navbar a {
     font-weight: bold;
     color: white;
+    margin-right: 10px;
 }
 
 .navbar a:hover {
@@ -20,10 +41,9 @@ body {
 
 .navbar-brand > img { /* > is the direct descendant selector */
     display: inline-block; /* so we can add some width an height */
-    width: 20px;
-    margin-bottom: 2px;
-    margin-right: 5px;
+    width: 1.5em;
     border-radius: 2px;
+    margin: 5px 15px;
 }
 
 ul.nav.navbar-nav li {
@@ -31,12 +51,14 @@ ul.nav.navbar-nav li {
 }
 
 .onboarding > .navbar {
-    background-image: url("./images/nav-bg.png");
-    background-size: 100% 100%;
+    padding: 0;
+    /*background-image: url("./images/nav-bg.png");*/
+    /*background-size: 100% 100%;*/
+    background: #99424f;
 }
 
 
-/* Homepage*/
+/* Homepage */
 .home-hero {
     width: 100vw;
     height: 100vh;
@@ -52,19 +74,26 @@ ul.nav.navbar-nav li {
     justify-content: center;
     /* Text style */
     color: white;
-    text-shadow: 0 0 8px #66757f;
+    text-shadow: 2px 2px 8px black;
     text-align: center;
     /* Cover image style */
     background-image: url("./images/signed-out-home.jpg");
-    z-index: -1; /*sanding to background - so it won't cover the navbar*/
+    z-index: -1; /*sending to background - so it won't cover the navbar*/
     background-position: center center; /* X Y position*/
     background-size: cover;
 }
 
+.welcome-signup-message {
+    box-shadow: 0px -1px 10px #FFFAF5;
+    padding: 10px;
+}
+
+/* Timeline */
 #messages .list-group-item {
     display: flex;
     align-items: flex-start;
     padding: 7px 20px 12px;
+    margin-top: 5px;
 }
 
 /* messages:not(.no-hover) means that messages does NOT have the class of 'no-hover' */
@@ -79,20 +108,7 @@ ul.nav.navbar-nav li {
     margin: 2px 30px 10px 10px;
 }
 
-.btn:hover {
-    cursor: pointer;
-}
-
-a.btn.btn-danger,
-a.btn.btn-danger:hover {
-    color: white;
-}
-
-button, #timeline, #container {
-    margin-top: 15px;
-}
-
-label {
-    margin-top: 10px;
+.img-thumbnail {
+    margin-top: 5px;
 }
 
