--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,34 @@
 /* General */
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700,900');
+
 body {
-    background-color: #FFFAF5;
+    font-family: 'Nunito', sans-serif;
+    background-color: #FFF4EE;
     word-break: break-word;
     hyphens: auto;
 }
 
-button {
+.btn-form-style {
     margin-top: 15px;
+    padding: 7px 50px;
+    background: #3E4788;
+}
+
+.title-gen-style {
+    font-weight: 800;
+    color: #3E4788;
 }
 
 .btn:hover {
     cursor: pointer;
+    opacity: 0.9;
+    color: white;
+}
+
+.btn {
+    border-radius: 20px;
+    color: white;
+    border: none;
 }
 
 a.btn.btn-danger,
@@ -20,11 +38,12 @@ a.btn.btn-danger:hover {
 
 label {
     margin-top: 10px;
+    font-weight: 700;
 }
 
 /* Navbar */
 .navbar {
-    margin-bottom: 1rem;
+    margin-bottom: 4rem;
 }
 
 .navbar a {
@@ -54,7 +73,8 @@ ul.nav.navbar-nav li {
     padding: 0;
     /*background-image: url("./images/nav-bg.png");*/
     /*background-size: 100% 100%;*/
-    background: #99424f;
+    /*background: #99424f;*/
+    background: #3E4788;
 }
 
 
@@ -62,20 +82,21 @@ ul.nav.navbar-nav li {
 .home-hero {
     width: 100vw;
     height: 100vh;
-    /* Position all the homepage content at the top lef corner of the page */
+    /* Position all the homepage content at the top left corner of the page */
     position: absolute;
     top: 0;
     left: 0;
     padding: 1rem;
+
     /* Flexbox */
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+
     /* Text style */
     color: white;
-    text-shadow: 2px 2px 8px black;
-    text-align: center;
+
     /* Cover image style */
     background-image: url("./images/signed-out-home.jpg");
     z-index: -1; /*sending to background - so it won't cover the navbar*/
@@ -84,8 +105,30 @@ ul.nav.navbar-nav li {
 }
 
 .welcome-signup-message {
-    box-shadow: 0px -1px 10px #FFFAF5;
-    padding: 10px;
+    margin-top: 120px;
+    margin-left: 70px;
+}
+
+.welcome-signup-message h1 {
+    font-size: 3.5rem;
+    font-weight: 900;
+    color: #3E4788;
+}
+
+.welcome-signup-message h4 {
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
+    color: deeppink;
+
+    margin-top: 25px;
+    margin-bottom: 60px;
+}
+
+.welcome-signup-message .btn {
+    padding: 10px 40px;
+    font-weight: bold;
+    background: #3E4788;
 }
 
 /* Timeline */
@@ -112,3 +155,34 @@ ul.nav.navbar-nav li {
     margin-top: 5px;
 }
 
+/* MessageForm */
+#message {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+
+/** Responsive **/
+/* Mid */
+@media only screen and (max-width: 1100px) {
+    .home-hero {
+        background-attachment: fixed;
+        background-position: unset;
+    }
+}
+
+/* Mobile */
+@media only screen and (max-width: 450px) {
+    .welcome-signup-message {
+        margin-top: 120px;
+        margin-left: 30px;
+    }
+
+    .welcome-signup-message h1 {
+        font-size: 40px;
+    }
+
+    .welcome-signup-message h4 {
+        font-size: 1rem;
+    }
+}
