--- a/client/src/scss/main.css
+++ b/client/src/scss/main.css
@@ -29,11 +29,37 @@ ul.nav.navbar-nav li {
   border-radius: 20px;
   color: white;
   border: none; }
-  .btn:hover {
+  .btn:not(:disabled):hover {
     cursor: pointer;
     opacity: 0.9;
     color: white; }
 
+.btn-load {
+  position: relative;
+  display: inline-block; }
+  .btn-load.is-loading:hover {
+    cursor: no-drop; }
+  .is-loading .btn-load__content {
+    opacity: 0; }
+
+.btn-loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -10px 0 0 -10px;
+  width: 22px;
+  height: 22px;
+  border: 1px solid #ffffff80;
+  border-left-color: #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  animation: btRotate 0.6s infinite linear; }
+
+@keyframes btRotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
 /* Mid */
 @media only screen and (max-width: 1100px) {
   .home-hero {
@@ -99,6 +125,67 @@ label {
   padding: 7px 50px;
   background: #3E4788; }
 
+.btn {
+  border-radius: 20px;
+  color: white;
+  border: none; }
+  .btn:not(:disabled):hover {
+    cursor: pointer;
+    opacity: 0.9;
+    color: white; }
+
+.btn-load {
+  position: relative;
+  display: inline-block; }
+  .btn-load.is-loading:hover {
+    cursor: no-drop; }
+  .is-loading .btn-load__content {
+    opacity: 0; }
+
+.btn-loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -10px 0 0 -10px;
+  width: 22px;
+  height: 22px;
+  border: 1px solid #ffffff80;
+  border-left-color: #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  animation: btRotate 0.6s infinite linear; }
+
+@keyframes btRotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+.loader {
+  margin: 30% auto; }
+
+#loader-4 {
+  width: 100px;
+  margin: 0 auto; }
+  #loader-4 span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    background-color: #3E4788;
+    margin: 35px 5px;
+    opacity: 0; }
+  #loader-4 span:nth-child(1) {
+    animation: opacitychange 1s ease-in-out infinite; }
+  #loader-4 span:nth-child(2) {
+    animation: opacitychange 1s ease-in-out 0.33s infinite; }
+  #loader-4 span:nth-child(3) {
+    animation: opacitychange 1s ease-in-out 0.66s infinite; }
+
+@keyframes opacitychange {
+  0%, 100% {
+    opacity: 0; }
+  60% {
+    opacity: 1; } }
 #messages .list-group-item {
   display: flex;
   align-items: flex-start;
@@ -122,11 +209,37 @@ label {
   border-radius: 20px;
   color: white;
   border: none; }
-  .btn:hover {
+  .btn:not(:disabled):hover {
     cursor: pointer;
     opacity: 0.9;
     color: white; }
 
+.btn-load {
+  position: relative;
+  display: inline-block; }
+  .btn-load.is-loading:hover {
+    cursor: no-drop; }
+  .is-loading .btn-load__content {
+    opacity: 0; }
+
+.btn-loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -10px 0 0 -10px;
+  width: 22px;
+  height: 22px;
+  border: 1px solid #ffffff80;
+  border-left-color: #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  animation: btRotate 0.6s infinite linear; }
+
+@keyframes btRotate {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
 label {
   margin-top: 10px;
   font-weight: 700; }
